
3.45  2012-10-10
  - Added multi_accept attribute to Mojo::IOLoop.
  - Added multi_accept attribute to Mojo::IOLoop::Server.
  - Relaxed comment handling in Mojo::DOM::HTML a little. (jberger)
  - Improved accept performance of all built-in web servers significantly.
  - Improved documentation.
  - Improved tests.

3.44  2012-09-29
  - Improved html_escape to favor lower case entities. (judofyr)
  - Improved javascript and stylesheet helpers to not generate type
    attributes.
  - Improved documentation.
  - Improved tests.

3.43  2012-09-22
  - Updated jQuery to version 1.8.2.
  - Improved Hypnotoad to clean up old PID files containing a 0.
    (coffeemonster)
  - Improved documentation.

3.42  2012-09-16
  - Improved Hypnotoad to clean up old PID files.
  - Improved documentation.
  - Improved tests.

3.41  2012-09-13
  - Improved Mojo::EventEmitter to warn about failed error events.
  - Improved resilience of Mojo::IOLoop exception handling.
  - Improved tests.
  - Fixed small CGI bug.

3.40  2012-09-11
  - Improved tests.
  - Fixed Perl 5.10.1 compatibility.
  - Fixed FindBin support in Mojolicious applications.
  - Fixed a few multipart bugs.

3.39  2012-09-10
  - Improved Mojo::URL and Mojo::Parameters performance.
  - Improved documentation.
  - Improved tests.
  - Fixed support for query parameters in Mojolicious::Plugin::Charset.

3.38  2012-09-07
  - Added xor_encode method to Mojo::ByteStream.
  - Added xor_encode function to Mojo::Util.
  - Improved documentation.
  - Fixed small xor_encode bug. (dod, crab)

3.37  2012-09-04
  - Added finish method to Mojo::Message.
  - Updated jQuery to version 1.8.1.
  - Improved documentation.
  - Improved tests.
  - Fixed Mojo::Transaction to propagate connection close to Mojo::Message.
  - Fixed small state bug in Mojo::Transaction.

3.36  2012-08-30
  - Improved documentation.
  - Improved tests.
  - Fixed small multipart bug.

3.35  2012-08-28